--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <link href="./assets/fontawesome/css/all.css" rel="stylesheet">
+  <script defer src="./assets/fontawesome/js/all.js"></script> 
 
-
+  
 </head>
 <body>
+
+
   <app-root></app-root>
+
+
 </body>
 </html>
